--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,15 @@
 spring.security.oauth2.client.registration.google.client-id=1031279451991-0nifipo41d5b4h7p6d0i929hpg02l5en.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=oR5xVvks6kUHKbRgza3fnKuz
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.security.oauth2.client.registration.naver.client-id=FJNVUBhHtDKXX5Yijbf7
+spring.security.oauth2.client.registration.naver.client-secret=jM75H9mZnx
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization_grant_type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+spring.security.oauth2.client.provider.naver.authorization_uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token_uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user_name_attribute=response
