--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ cache:
     - '$HOME/.gradle'
 
 script: "./gradlew clean build"
+before_install:
+  - chomod +x gradlew
 
 # CI 실행 완료시 메일로 알람
 notifications:
