--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script: "./gradlew clean build"
 before_install:
   - chmod +x gradlew
 before_deploy:
-  - zip -r com.hyejin.book2
+  - zip -r com.hyejin.book2 *
   - mkdir -p deploy
   - mv com.hyejin.book2.zip deploy/com.hyejin.book2.zip
 
