--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script: "./gradlew clean build"
 before_install:
   - chmod +x gradlew
 before_deploy:
-  - zip -r com.hyejin.book2 *
+  - zip -r com.hyejin.book2 com.hyejin.book2
   - mkdir -p deploy
   - mv com.hyejin.book2.zip deploy/com.hyejin.book2.zip
 
@@ -24,7 +24,7 @@ deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
     secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-    bucket: freelec-springboot-build # S3 버킷
+    bucket: hyejin-springboot-build # S3 버킷
     region: ap-northeast-2
     skip_cleanup: true
     acl: private # zip 파일 접근을 private으로
