--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
     secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
     bucket: hyejin-springboot-build
-    key: hyejin-springboot2-webservice.zip # 빌드 파일을 압축해서 전달
+    key: com.hyejin.book2.zip # 빌드 파일을 압축해서 전달
     bundle_type: zip
     application: hyejin-springboot2-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
     deployment_group: hyejin-springboot2-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
