--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.h2.console.enabled=true
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
 server.port=9090
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
