--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group 'org.example'
-version '1.0.1-SNAPSAHOT-'+new Date().format("yyyyMMddHHmmss")
+version '1.0.1-SNAPSAHOT-'+new Date().format("yyyyMMddHHmmss") //자동으로 버전 값 변경
 sourceCompatibility = 1.8
 
 repositories {
