--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
-##spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.profiles.include=oauth
+spring.profiles.include=real-oauth
 spring.session.store-type=jdbc
-server.port=9090
-#spring.mvc.view.prefix=/WEB-INF/view/
-#spring.mvc.view.suffix=.jsp
+
